--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "got": "^9.6.0",
     "helmet": "^3.22.0",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "metascraper": "^5.11.6",
