--- a/package.json
+++ b/package.json
@@ -13,28 +13,17 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "domino": "^2.1.5",
     "express": "^4.17.1",
-    "got": "^9.6.0",
     "helmet": "^3.22.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "metascraper": "^5.11.6",
-    "metascraper-description": "^5.11.6",
-    "metascraper-image": "^5.11.6",
-    "metascraper-logo": "^5.11.6",
-    "metascraper-title": "^5.11.6",
-    "metascraper-url": "^5.11.9",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
-    "node-fetch": "^2.6.0",
-    "page-metadata-parser": "^1.1.4",
-    "scrape-metadata": "^2.0.0",
-    "url-metadata": "^2.4.0"
+    "page-metadata-parser": "^1.1.4"
   }
 }
